added persist storage and recovering translations

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -1,5 +1,6 @@
 {
   "New Game": "Новая игра",
   "Versions": "Версии",
-  "Skins": "Обложки"
+  "Skins": "Обложки",
+  "Restore game": "Продолжить"
 }
