updated android settings

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -1,6 +1,5 @@
 {
   "New Game": "Новая игра",
   "Versions": "Версии",
-  "Skins": "Обложки",
-  "Restore game": "Продолжить"
+  "Skins": "Обложки"
 }
