page routes / roles select / help page

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -2,5 +2,34 @@
 	"New Game": "Новая игра",
 	"Versions": "Версии",
 	"Skins": "Обложки",
-	"About": "О приложении"
+	"About": "О приложении",
+	"Help": "Справка",
+
+	"Scroll": "Прокрутка",
+	"Short Press": "Короткое нажатие",
+	"Long Press": "Долгое нажатие",
+
+	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
+  
+  "board.help.press.main": "Уменьшает значение на 1",
+  "board.help.press.action": "Уменьшает значение на 1. Если значение равно 0, сбрасывает счётчик до базового значения",
+  
+  "board.help.press.undo": "Отменить последнее действие",
+  "board.help.press.redo": "Вернуться к предыдущему действию",
+
+  "board.help.press.skills": "Открывает калькулятор навыков",
+
+  "board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
+
+  "board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
+  "board.help.longPress.secondary": "Сбрасывает значение до 0",
+
+  "board.help.longPress.undo": "Возвращает историю изменений к последней правке",
+  "board.help.longPress.redo": "Прокручивает историю изменений к начальному состоянию",
+
+  "board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
+  "board.help.calculator.clearHistory": "Очищает историю проверок",
+
+  "board.help.special.additionalAction": "Некоторые сыщики имеют дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
+  "board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)"
 }
