--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -11,6 +11,8 @@
 
   "board.help.press.reset": "Resets investigator stats to their default values",
 
+  "board.help.hold.freeArea": "Tap and hold anywhere on screen to see damages and horror",
+
   "board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
   "board.help.longPress.secondary": "Resets value to 0",
 
