--- a/slices/features/i18n/config/translations/de.json
+++ b/slices/features/i18n/config/translations/de.json
@@ -1,5 +1,6 @@
 {
 	"New Game": "Neues Spiel",
+
 	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
   
   "board.help.press.main": "Decrease value by 1",
@@ -11,6 +12,8 @@
   "board.help.press.skills": "Opens skill calculator",
 
   "board.help.press.reset": "Resets investigator stats to their default values",
+
+  "board.help.hold.freeArea": "Tap and hold anywhere on screen to see damages and horror",
 
   "board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
   "board.help.longPress.secondary": "Resets value to 0",
