--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -22,7 +22,7 @@
 
   "board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-  "board.help.hold.freeArea": "Удерживайте нажатие в свободном месте для просмтра полученных ран и ужаса",
+  "board.help.hold.freeArea": "Удерживайте нажатие в свободном месте для просмотра полученных ран и ужаса",
 
   "board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
   "board.help.longPress.secondary": "Сбрасывает значение до 0",
