fix: bg positions / help translations / keyboard check translations

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -8,6 +8,9 @@
 	"Scroll": "Прокрутка",
 	"Short Press": "Короткое нажатие",
 	"Long Press": "Долгое нажатие",
+	"Calculator": "Калькулятор",
+	"Equals": "Считать",
+	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
 
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
@@ -22,7 +25,7 @@
 
 	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Удерживайте нажатие в свободном месте для просмотра полученных ран и ужаса",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран и ужаса",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0",
