feat: haptics config

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -36,6 +36,6 @@
 	"board.help.calculator.toggleKeyboard": "Скрывает/показывает клавиатуру",
 	"board.help.calculator.clearHistory": "Очищает историю проверок",
 
-	"board.help.special.additionalAction": "Некоторые сыщики имеют дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
+	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)"
 }
