--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -1,4 +1,5 @@
 {
+	"board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
 	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
 
 	"board.help.press.main": "Decrease value by 1",
