--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -11,7 +11,9 @@
 	"Calculator": "Калькулятор",
 	"Equals": "Считать",
 
+	"Haptic": "Вибрация",
 	"Reset Board?": "Сбросить данные?",
+	"System (if available)": "Системное (если есть)",
 	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
