build: biome fix / version update

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -13,7 +13,7 @@
 
 	"Haptic": "Вибрация",
 	"Reset Board?": "Сбросить данные?",
-	"System (if available)": "Системное (если есть)",
+	"System (if available)": "Системная (если есть)",
 	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
