feat: added spoilers section

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -18,6 +18,9 @@
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
 
+	"Spoiler Alert": "Осторожно, спойлеры!",
+	"This section contains campaign spoilers. Do you want to proceed?": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
+
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
 
 	"board.help.press.main": "Уменьшает значение на 1",
