feat: damage animation

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -26,6 +26,8 @@
 	"No main & additional actions": "Нет основных и доп. действий",
 	"No main actions": "Нет основных действий",
 
+	"Damage/Horror animation": "Анимация ран/ужаса",
+
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
 
 	"board.help.press.main": "Уменьшает значение на 1",
