fix: language switch / text correction

--- a/slices/features/i18n/config/translations/es.json
+++ b/slices/features/i18n/config/translations/es.json
@@ -18,7 +18,7 @@
 	"No main & additional actions": "No main & additional actions",
 	"No main actions": "No main actions",
 
-	"Damage/Horror animation": "Damage/Horror animation",
+	"Damage/Horror visual effects": "Damage/Horror visual effects",
 	"Scroll Deceleration": "Scroll Deceleration",
 	"Inertial Scrolling": "Inertial Scrolling",
 
