--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -26,7 +26,7 @@
 	"No main & additional actions": "Нет основных и доп. действий",
 	"No main actions": "Нет основных действий",
 
-	"Damage/Horror animation": "Анимация ран/ужаса",
+	"Damage/Horror visual effects": "Эффекты ран/ужаса",
 
 	"Scroll Deceleration": "Замедление прокрутки",
 	"Inertial Scrolling": "Инерция при прокрутке",
