--- a/slices/features/i18n/config/translations/pl.json
+++ b/slices/features/i18n/config/translations/pl.json
@@ -18,7 +18,7 @@
 
 	"Behavior": "Behavior",
 
-	"Damage/Horror animation": "Damage/Horror animation",
+	"Damage/Horror visual effects": "Damage/Horror visual effects",
 	"Scroll Deceleration": "Scroll Deceleration",
 	"Inertial Scrolling": "Inertial Scrolling",
 
