--- a/slices/features/i18n/config/translations/pt.json
+++ b/slices/features/i18n/config/translations/pt.json
@@ -1,50 +1,3 @@
 {
-	"New Game": "Novo jogo",
-
-	"modal.spoiler.message": "This section contains campaign spoilers. Do you want to proceed?",
-
-	"picker.deceleration.fast": "Fast",
-	"picker.deceleration.normal": "Normal",
-
-	"Investigator Special Actions": "Investigator Special Actions",
-	"Press and hold": "Press and hold",
-
-	"Spoiler Alert": "Spoiler Alert",
-	"Game settings": "Game settings",
-	"Turn end": "Turn end",
-
-	"No main & additional actions": "No main & additional actions",
-	"No main actions": "No main actions",
-
-	"Damage/Horror visual effects": "Damage/Horror visual effects",
-	"Scroll Deceleration": "Scroll Deceleration",
-	"Inertial Scrolling": "Inertial Scrolling",
-
-	"Behavior": "Behavior",
-
-	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
-
-	"board.help.press.main": "Decrease value by 1",
-	"board.help.press.action": "Decrease value by 1. If value is 0, resets counter to its base value",
-
-	"board.help.press.undo": "Undo last action",
-	"board.help.press.redo": "Redo last action",
-
-	"board.help.press.skills": "Opens skill calculator",
-
-	"board.help.press.reset": "Resets investigator stats to their default values",
-
-	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror",
-
-	"board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
-	"board.help.longPress.secondary": "Resets value to 0",
-
-	"board.help.longPress.redo": "Sets change history to the last change",
-	"board.help.longPress.undo": "Sets change history to the first change",
-
-	"board.help.calculator.toggleKeyboard": "Shows/hides keyboard",
-	"board.help.calculator.clearHistory": "Clears skill check history",
-
-	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
-	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)"
+	"New Game": "Novo jogo"
 }
