fix: game text tokens / rogue background / goToHome behavior

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -66,6 +66,6 @@
 	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.minValue": "Минимальное значение расчётов не может быть больше 0",
+	"board.help.calculator.minValue": "Минимальное значение расчётов не может быть меньше 0",
 	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика"
 }
