--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -10,6 +10,7 @@
 	"Long Press": "Долгое нажатие",
 	"Calculator": "Калькулятор",
 	"Equals": "Считать",
+	"XP": "Очки опыта",
 
 	"Haptic": "Вибрация",
 	"Reset Board?": "Сбросить данные?",
