feat: base asset management

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -39,6 +39,7 @@
 
 	"picker.deceleration.fast": "Быстрое",
 	"picker.deceleration.normal": "Нормальное",
+	"picker.deceleration.instant": "Мгновенное",
 	"picker.deceleration.custom": "Настроить",
 
 	"board.help.scroll": "Прокрутите любой параметр сыщика до нужного значения",
