--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -7,6 +7,7 @@
 
 	"picker.deceleration.fast": "Fast",
 	"picker.deceleration.normal": "Normal",
+	"picker.deceleration.instant": "Instant",
 
 	"board.reset.text": "This action will reset the data to the beginning of the game for this investigator",
 	"board.help.scroll": "You can change any investigator value by scrolling a picker to a needed position",
