feat: progress bar

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -13,7 +13,7 @@
 	"XP": "Очки опыта",
 
 	"Loading fonts": "Загрузка шрифтов",
-	"Loading assets {count}/{total}": "Загрузка текстур {{count}}/{{total}}",
+	"Loading assets {{count}}/{{total}}": "Загрузка текстур {{count}}/{{total}}",
 	"Haptic": "Вибрация",
 	"Reset Board?": "Сбросить данные?",
 	"System (if available)": "Системная (если есть)",
