feat: damage/horror option

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -21,6 +21,10 @@
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
 
+	"Health/Sanity": "Здоровье/Рассудок",
+	"Show health/sanity": "Показать здоровье/рассудок",
+	"Show damage/horror": "Показать раны/ужас",
+
 	"Spoiler Alert": "Осторожно, спойлеры!",
 	"Game settings": "Игра",
 	"modal.spoiler.message": "Этот раздел содержит сюжетные спойлеры. Продолжить?",
