--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -60,7 +60,7 @@
 
 	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран и ужаса",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0",
@@ -74,6 +74,13 @@
 	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.minValue": "Минимальное значение расчётов не может быть меньше 0",
-	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика"
+	"board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
+	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика. При удержании пальца на расчёте, он удаляется",
+	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
+	"board.help.calculator.history.remove": "Удалить расчёт",
+	"board.help.calculator.history.set-name": "Дать название расчёта",
+	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
+
+	"board.help.pins.long-press": "На экране планшета, долгое нажатие на расчёте открепляет расчёт",
+	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов для того, чтобы его скрыть/показать"
 }
