--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -22,6 +22,8 @@
 	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
+	"Tap to seal": "Нажмите, чтобы запечатать",
+	"Hold to seal": "Удерживайте, чтобы запечатать",
 
 	"Health/Sanity": "Здоровье/Рассудок",
 	"Show health/sanity": "Показать здоровье/рассудок",
