feat: skill check chaos token reveal

--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -24,6 +24,7 @@
 	"Press and hold": "Нажмите и удерживайте",
 	"Tap to seal": "Нажмите, чтобы запечатать",
 	"Hold to seal": "Удерживайте, чтобы запечатать",
+	"Hold": "Удерживайте",
 
 	"Health/Sanity": "Здоровье/Рассудок",
 	"Show health/sanity": "Показать здоровье/рассудок",
