feat: reavealing skill chaos token / chaos bag help

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -1,8 +1,10 @@
 {
-	"board.help.pins.long-press": "Long press on a calculation on the board screen to unpin it",
+	"board.help.pins.press": "Press on a calculation on the board screen to unpin it",
+
+	"board.help.pins.longPress": "Long press on a calculation on the board screen to reveal chaos token for this calculation",
 	"board.help.pins.toggle": "If you have pinned calculations, you can press on its block on the board page to show/hide it",
 
-	"board.help.calculator.history.actions": "Swipe left on calculation to see an additional menu",
+	"board.help.calculator.history.actions": "Swipe left on a calculation to see an additional menu",
 	"board.help.calculator.history.remove": "Remove a calculation",
 	"board.help.calculator.history.set-name": "Name a calculation",
 	"board.help.calculator.history.pin": "Pin a calculation on the top of the list and on the board screen",
@@ -30,7 +32,7 @@
 
 	"board.help.press.reset": "Resets investigator stats to their default values",
 
-	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values",
+	"board.help.hold.freeArea": "Tap and hold anywhere on the screen to see the taken damage and horror. You can also view the difference between base and actiual skill values. By holding more, you will reveal a token from the chaos bag",
 
 	"board.help.longPress.main": "Shows/hides modifier counter. You can change base value (e.g. permanent +1 health, -2 sanity)",
 	"board.help.longPress.secondary": "Resets value to 0",
@@ -42,5 +44,13 @@
 	"board.help.calculator.clearHistory": "Clears skill check history",
 
 	"board.help.special.additionalAction": "Some investigators have additional actions. Tap on this icon to mark action as completed",
-	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)"
+	"board.help.special.lola": "Tap on the name to change Lola's current role (faction)",
+
+	"board.help.chaosBag": "Tap and hold anywhere on the screen or on a skill value",
+	"board.help.chaosBag.returnAll": "Return all revealed tokens to the chaos bag",
+	"board.help.chaosBag.return": "[token_symbol_fill] - Return all revealed tokens to the chaos bag (exceping [bless] and [curse])",
+	"board.help.chaosBag.token.press": "Tap on a revealed token to return it to the chaos bag (or remove if it is [bless] or [curse])",
+	"board.help.chaosBag.token.longPress": "Long press on a revealed token to seal it",
+	"board.help.chaosBag.oneMore": "Long press to reveal one more token",
+	"board.help.calculator.chaosToken": "Long press to reveal a chaos token for the last calculation"
 }
