--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -22,7 +22,6 @@
 	"board.reset.text": "Действие сбросит данные на начало игры для этого сыщика",
 	"Investigator Special Actions": "Специальные действия",
 	"Press and hold": "Нажмите и удерживайте",
-	"Tap to seal": "Нажмите, чтобы запечатать",
 	"Hold to seal": "Удерживайте, чтобы запечатать",
 	"Hold": "Удерживайте",
 
@@ -65,7 +64,7 @@
 
 	"board.help.press.reset": "Сбрасывает параметры до первоначального состояния",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков. Также это действие позволяет вытянуть жетон хаоса",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0",
@@ -80,12 +79,21 @@
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
 	"board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
-	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика. При удержании пальца на расчёте, он удаляется",
+	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
 	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
 	"board.help.calculator.history.remove": "Удалить расчёт",
 	"board.help.calculator.history.set-name": "Дать название расчёта",
 	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
 
-	"board.help.pins.long-press": "На экране планшета, долгое нажатие на расчёте открепляет расчёт",
-	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов для того, чтобы его скрыть/показать"
+	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
+	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
+	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
+
+	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие в свободном месте или на значении навыка",
+	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
+	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
+	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
+	"board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
+	"board.help.chaosBag.oneMore": "Удерживайте нажатие, чтобы вытянуть ещё один жетон",
+	"board.help.calculator.chaosToken": "Удерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту"
 }
